--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,6 +31,7 @@ body {
 }
 
 button {
+  background-color: white;
   border-radius: 0.2rem;
   font-size: 1rem;
   margin: 1rem auto;
@@ -43,6 +44,7 @@ h1 {
 }
 
 input {
+  background-color: white;
   font-size: 1rem;
   padding: 0.5rem;
   display: block;
